# aspire-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ISSUES_PUNCHLIST.md  Makefile  PRESS_RELEASE.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  TESTS-TODO.md  pyproject.toml
.claude/: settings.local.json
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml
aspire/: __init__.py  cli.py  trainer.py
aspire/dialogue/: __init__.py  formatter.py  generator.py  manager.py
aspire/losses/: __init__.py
aspire/perception/: __init__.py  character.py  controlled_chaos.py  empathy_evaluation.py  integration.py  metacognition.py  syntropy.py  theory_of_mind.py
aspire/teachers/: __init__.py  base.py  claude.py  composite.py  local.py  openai.py  personas.py  registry.py
docs/: perception-module.md
examples/: basic_dialogue.py  composite_teacher.py  custom_teacher.py
integrations/code/: __init__.py  analysis.py  code_critic.py  code_teacher.py  data.py  trainer.py
integrations/code/examples/: basic_critique.py  train_critic.py
integrations/forge/: image_critic.py  vision_teacher.py
integrations/forge/scripts/: aspire_generate.py  aspire_train.py
integrations/isaac/: __init__.py  isaac_wrapper.py  motion_teacher.py  trainer.py  trajectory_critic.py
integrations/isaac/examples/: basic_training.py  custom_teacher.py  locomotion.py
site/: astro.config.mjs
site/src/: site-config.ts
tests/: __init__.py  conftest.py  test_cli.py  test_code_critic.py  test_config.py  test_critic_edge_cases.py  test_critics.py  test_dialogue.py  test_dialogue_edge_cases.py  test_losses_combined.py  test_losses_edge_cases.py  test_teachers.py  test_teachers_claude.py  test_teachers_local.py  test_teachers_openai.py  test_trainer.py  test_trainer_edge_cases.py  test_trainer_unit.py  test_windows_compatibility.py
tests/core/: __init__.py  test_config.py  test_critic_head.py  test_critic_separate.py  test_dialogue_generator.py  test_losses_comprehensive.py  test_losses_critic.py  test_losses_student.py  test_teachers_base.py  test_teachers_claude.py  test_teachers_local.py  test_teachers_openai.py
tests/integrations/code/: __init__.py  test_analysis.py  test_code_analysis_comprehensive.py  test_code_config.py  test_code_critic.py  test_code_data.py  test_code_teacher.py  test_code_teachers_comprehensive.py
tests/integrations/forge/: __init__.py  test_image_critic.py  test_vision_teacher.py
tests/integrations/isaac/: __init__.py  test_isaac_config.py  test_motion_teacher.py  test_trajectory_critic.py
tests/perception/: __init__.py  test_character.py  test_controlled_chaos.py  test_metacognition.py  test_syntropy.py  test_theory_of_mind.py
tests/performance/: test_dialogue_cache_performance.py
