[project]
name = "aspire-ai"
version = "0.2.1"
description = "Adversarial Student-Professor Internalized Reasoning Engine"
readme = "README.md"
license = "MIT"
authors = [{ name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "accelerate>=0.28.0",
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",
    "anthropic>=0.25.0",
    "openai>=1.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "wandb>=0.16.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.3.0",
    "pyright>=1.1.350",
]
teachers = [
    "anthropic>=0.25.0",
    "openai>=1.20.0",
]
code = [
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
]
forge = [
    "Pillow>=10.0.0",
    "gradio>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/aspire-ai"
Repository = "https://github.com/mcp-tool-shop-org/aspire-ai"
Issues = "https://github.com/mcp-tool-shop-org/aspire-ai/issues"

[project.scripts]
aspire = "aspire.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aspire", "integrations"]

[tool.hatch.build.targets.sdist]
include = [
    "/aspire",
    "/integrations",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/logo.png",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N", "E501"]
"aspire/*" = ["N812"]  # torch.nn.functional as F is universal PyTorch convention

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
ignore = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "-ra",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks integration tests",
    "api: marks tests that call external APIs",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["aspire", "integrations"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
